--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 a{
     text-decoration: none;
  }
- /*------------------------------------cambiosPorBoostrap-----------------------------------*/
+ /*------------------------------------cambiosParaUsarBoostrap-----------------------------------*/
  .home{
     background-image: url(../assets/img/backgrouds/bg4.jpg);
     background-attachment: fixed;
@@ -43,8 +43,11 @@ a{
     margin: auto;
 }
 
- /*-------------------------------------------------------------------------------*/
- 
+ /*----------------------------------------------------ANIMACION-----------------------------------------------------------------------------------*/
+ .grande:hover{
+    transform: scale(1.5)
+ }
+ /*------------------------------------------------------------------------------------------------------------------------------------------------*/
 .encabezado{
     display: flex; flex-direction: row;
     justify-content: center;
