--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,19 @@ a{
     background-size: cover;
 }
 .pad{
-    padding-bottom: 20px;
+    padding: 50px;
 }
-.padLef{
-    padding-left: 300px;
+.mar0{
+    margin: 0 auto;
 }
+.medio1{
+    display: flex; flex-direction: row;
+    justify-content: center;
+}
+
 .medio2{
     display: flex; flex-direction: column;
     justify-content: center;
-
 }
 .containerDiv{
     padding: 0;
@@ -59,6 +63,8 @@ a{
 
 .titDis{
     font-family: 'Playfair Display', serif;
+    margin-top: 8px;
+    margin-bottom: 0;
     font-size: 2rem;
     padding: 15px;
     color: white;
@@ -71,6 +77,7 @@ a{
 .prod{
     background: radial-gradient(circle, rgba(148,233,222,0.7287289915966386) 6%, rgba(238,174,202,1) 98%);
     border: 5px outset rgba(0, 128, 0, 0.171);
+    padding: auto;
     display: flex; 
     flex-direction: column;
     justify-content: center;
@@ -116,6 +123,10 @@ ul {
     text-align: center;
     width: 300px;
 }
+.tamText{
+    width: 300px; 
+}
+
 .titulo{
    font-family: 'Playfair Display', serif;
    font-size: 2rem;
